# stardeck

./: .gitignore  .sesskey  LICENSE  PRD.md  README.md  demo_slides.md  progress.md  pyproject.toml
.beads/: issues.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: create-release.yml  quality.yml  release.yml
docs/designs/: 2026-02-01-stardeck.md  2026-02-02-drawing-annotations.md  drawing-plugin.md
docs/plans/: 2026-02-01-stardeck-mvp.md  2026-02-01-stardeck-phase2.md  2026-02-02-drawing-annotations.md  2026-02-02-phase3-click-animations.md  2026-02-02-presenter-mode.md  DRAWING.md
docs/research/: slidev-presenter-mode.md  slidev-transitions.md
stardeck/: cli.py  drawing.py  drawing_relay.py  export.py  models.py  parser.py  presenter.py  renderer.py  server.py  tunnel.py  watch.py
stardeck/static/: drawing.js
stardeck/themes/: __init__.py
stardeck/themes/default/: __init__.py  styles.css
stardeck/themes/light/: __init__.py  styles.css
tests/: conftest.py  test_cli.py  test_drawing.py  test_export.py  test_layouts.py  test_models.py  test_parser.py  test_presenter.py  test_renderer.py  test_server.py  test_state.py  test_themes.py  test_tunnel.py  test_watch.py
