[project]
name = "stardeck"
version = "0.1.0"
description = "Developer-first presentation tool - Slidev for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starhtml",
    "markdown-it-py",
    "mdit-py-plugins",
    "pygments",
    "pyyaml",
    "click",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
starhtml = { path = "../starhtml-upstream", editable = true }
