[project]
name = "stardeck"
version = "0.1.0"
description = "Developer-first presentation tool - Slidev for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starhtml>=0.5.3",
    "star-drawing>=0.1.0",
    "markdown-it-py",
    "mdit-py-plugins",
    "pygments",
    "pyyaml",
    "click",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
stardeck = "stardeck.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--verbose", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
starhtml = { path = "../starhtml-upstream", editable = true }
star-drawing = { path = "../star-drawing", editable = true }
starelements = { path = "../starelements", editable = true }
